--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "4.0",
     "mongoose": "^7.1.0",
     "nodemailer": "^6.9.1",
+    "streamifier": "^0.1.1",
     "validator": "^13.9.0"
   },
   "author": "",
